# ros2_cpp_cuda_template_project

./: .dockerignore  .gitignore  AGENTS.md  CONTEXT.md  README.md  build_ros2_ws.sh  tailor_ros2_template_cleanup.sh
.devcontainer/: devcontainer.json
.github/workflows/: build_ros2.yml  docker.yml  docs_pages.yml
doc/: Doxyfile  containers.md  cpp_cuda_core.md  main_page.md  profiling.md  ros2_workspace_build.md  template_usage.md  testing_and_ci.md  wrappers.md
doc/developments/: ros2_cpp_cuda_template_plan.md
docker/: Dockerfile  entrypoint.sh  run_dev_container.sh  run_runtime_container.sh  runtime_entrypoint.sh
examples/core_consumer_project/: CMakeLists.txt  example_project.cpp
profiling/: common_core_profiler.sh  run_core_call_profiling.sh  run_core_mem_complexity.sh  run_core_ops_profiling.sh  run_ros2_integration_timing.sh
ros2_ws/src/template_project_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/template_project_bringup/config/: template_project.yaml
ros2_ws/src/template_project_bringup/launch/: template_project.launch.py  template_project_composed.launch.py
ros2_ws/src/template_project_bringup/scripts/: run_template_project.sh
ros2_ws/src/template_project_core/: CMakeLists.txt  package.xml
ros2_ws/src/template_project_core/apps/: template_project_core_example.cpp
ros2_ws/src/template_project_core/benchmarks/: template_project_core_benchmark.cpp
ros2_ws/src/template_project_core/cmake/: HandleCUDA.cmake  HandleCompilerFlags.cmake  HandleDoxygenDocs.cmake  HandleGitVersion.cmake  HandleOptiX.cmake  HandleWrapper.cmake  HandleZeroMQ.cmake  cmake_cuda_ptx_tools.cmake  cmake_utils.cmake
ros2_ws/src/template_project_core/include/template_project_core/: CTemplateAlgorithm.h
ros2_ws/src/template_project_core/src/: CTemplateAlgorithm.cpp
ros2_ws/src/template_project_core/test/: testTemplateAlgorithm.cpp
ros2_ws/src/template_project_description/: CMakeLists.txt  package.xml
ros2_ws/src/template_project_description/urdf/: template_project.urdf
ros2_ws/src/template_project_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/template_project_interfaces/msg/: AlgorithmStatus.msg
ros2_ws/src/template_project_interfaces/srv/: RunAlgorithm.srv
ros2_ws/src/template_project_nodes/: CMakeLists.txt  package.xml
ros2_ws/src/template_project_nodes/include/template_project_nodes/: CTemplateLifecycleNode.h
ros2_ws/src/template_project_nodes/src/: CTemplateLifecycleNode.cpp  template_project_node_main.cpp
ros2_ws/src/template_project_nodes/test/: test_node_construction.cpp
ros2_ws/src/template_project_spinup/: CMakeLists.txt  package.xml
ros2_ws/src/template_project_spinup/launch/: template_project.launch.py  template_project_composed.launch.py
ros2_ws/src/template_project_spinup/rviz/: template_project.rviz
ros2_ws/src/template_project_spinup/scripts/: run_template_project.sh
tests/template_checks/: test_template_structure.py
