<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>template_project_spinup</name>
  <version>0.1.0</version>
  <description>Launch and runtime assets for the ROS2 C++/CUDA template.</description>
  <maintainer email="maintainer@example.com">Template Maintainer</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>template_project_nodes</exec_depend>
  <exec_depend>template_project_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

